# cloc

./: Cargo.toml  README.md  build.rs  language.json  languages.json
src/: cli.rs  counter.rs  language_type.rs  main.rs  state.rs  table.rs  walker.rs
