[package]
name = "cloc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
rayon = { version = "^1" }
regex = "^1.10"
once_cell = "^1.19"


[build-dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
quote = "^1"
syn = { version = "^2", features = ["full"] }
